# ShenYu

./: Cargo.toml  README.md
info/: changelog.md  credits.md
src/: banner.txt  lib.rs  main.rs  uci.rs
src/board_state/: bitboard.rs  board.rs  display.rs  fen.rs  mod.rs  typedefs.rs  zobrist.rs
src/eval/: mod.rs  psqt.rs
src/move_generation/: action.rs  list.rs  magic.rs  makemove.rs  masks.rs  mod.rs  movegen.rs  movelist.rs
src/movegen/: action.rs  atks.rs  bitboard.rs  board.rs  display.rs  fen.rs  genmoves.rs  mod.rs  movelist.rs  perft.rs  types.rs  zobrist.rs
src/search/: alphabeta.rs  evaluate.rs  gamehistory.rs  hashtable.rs  mod.rs  moveorder.rs  searchcontrol.rs  see.rs  timer.rs  transposition.rs
src/testing/: log.rs  mod.rs  perft.rs  perft_debugger.rs  perft_test_positions.txt
