[package]
name = "shenyu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
once_cell = "1.13.0"
colored = "2.0.0"
fastdivide = "0.4.0"
chrono = "0.4"
cfg-if = "1.0.0"
[profile.dev]
overflow-checks = false

[profile.release]
lto = true
panic = "abort"
overflow-checks = false