[package]
name = "ShenYu"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
static_init = "1.0.3"
rand = "0.8.5"
crossbeam = "0.8.2"

[profile.dev]
overflow-checks = false

[profile.release]
lto = true
panic = "abort"
overflow-checks = false